Misc cleanups to simplify test app